# mail-service

./: .dockerignore  .gitignore  .sample.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
src/: config.py  logger.py  main.py  schemas.py  service.py  telegram_bot.py  utils.py
src/bot/: main.py
src/bot/routers/: __init__.py  default.py  logs.py  ping.py
src/broker/: consumer.py  producer.py
