[project]
name = "mail-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.5",
    "fastapi>=0.115.12",
    "fastapi-mail>=1.5.0",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.5",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]

[tool.black]
line-length = 100
